# JAMEL-COMPACT

./: .dockerignore  .gitignore  JAMEL-COMPACT_idea.txt  LICENSE  README.md  pyproject.toml
configs/: benchmark_apps.json  config.yaml
data/: README.md
docker/jamel/: Dockerfile  build.sh  run.sh
docs/: APP_SPLIT.md  COMPACT_COMMANDS.md  ENVIRONMENT.md  ENVIRONMENTS.md  EVALUATION.md  SETUP.md  TRAINING.md
examples/: crafter_demo.py  jamel_compact_realworld.py  jamel_compact_vs_original.py  omnigibson_demo.py  show_compact_params.py  vizdoom_deathmatch_demo.py  vizdoom_demo.py  web_explorer.py  world_model.py
jamel/: __init__.py  coverage_artifact.py  weak_model_labeling_utils.py
jamel/arch/: __init__.py
jamel/arch/qwen3vl_compressor/: __init__.py  config.py  memory_injector.py  model.py  screen_compressor.py
jamel/cli/: analyze_curriculum.py  audit_coverage.py  baseline_eval.py  demo.py  main.py  preview.py  serve.py  train.py  weak_model_sft_augment.py  weak_model_sft_label.py
jamel/config/: __init__.py  settings.py
jamel/core/env/: types.py
jamel/core/memory/: __init__.py  base.py  explicit.py  types.py  window.py
jamel/core/policy/: agent.py  hooks.py
jamel/core/reward/: __init__.py  jaccard.py  types.py
jamel/log/: log_utils.py
jamel/models/: __init__.py  openai_model.py
jamel/models/chat_template/: qwen3_continue.jinja
jamel/models/service/: base.py  client.py  server.py  test.py  utils.py
jamel/pipeline/fsdp_online/: __init__.py  __main__.py  main.py  model.py  rollout.py  trainer.py
jamel/pipeline/local/: curriculum.py  main.py
jamel/train/: utils.py
jamel/train/agent/: main.py  params.py  processor.py
jamel/train/memory/: __init__.py  encoder.py  jamel_sft_dataset.py  modeling.py  package_model.py  prepare_sft_dataset.py  sft_dataset.py  (+2 more)
jamel/utils/: communication_utils.py  general_utils.py  response_utils.py
jamel_compact/: __init__.py  baseline_eval.py  baseline_train.py  config.py  data.py  data_cli.py  eval.py  loss.py  model.py  train.py
scripts/: aggregate_eval_results.py  download_scalewob_env.py  print_app_split.py  serve_scalewob.py  snapshots_to_mp4.py
shell/: download_scalewob_env.sh  package_model.sh  run_baseline_eval.sh  run_baseline_train.sh  run_compact_eval.sh  run_compact_prepare_data.sh  run_compact_train.sh  run_eval.sh  run_gemini31_react_10apps_50.sh  run_qwen25vl_7b_sft.sh  run_qwen3vl8b_react_10apps_50.sh  run_react_full_sft.sh  serve_qwen3vl8b_vllm.sh  serve_scalewob.sh  setup_env.sh
(+77 files in other folders)
